[tool.poetry]
name = "weatherstackapi"
version = "0.1.3"
description = "Python wrapper for the weather stack api"
authors = ["Darien Moore <LiskIsBest@gmail.com>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/LiskIsBest/WeatherStackApi"
repository = "https://github.com/LiskIsBest/WeatherStackApi/releases/tag/v0.1.3"
keywords = ["python", "weather", "weatherapi", "weather stack","api", "wrapper"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.10.6"
httpx = "^0.23.3"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
